[package]
name = "shuflr"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[lib]
name = "shuflr"
path = "shuflr.rs"

[[example]]
name = "demo"
path = "demo.rs"
